# xcqa

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: xcqa_bench.rs
docs/: MATHEMATICAL_VERIFICATION.md  README.md  dictionary_encoding.md  zk_signature.md
src/: config.rs  lib.rs  main.rs  simd.rs
