[package]
name = "xcqa"
version = "0.1.0"
edition = "2024"
authors = ["rand0mdevel0per"]
description = "Dictionary-based cryptosystem with zero-knowledge proof signatures"
license = "MIT"
repository = "https://github.com/rand0mdevel0per/xcqa"
keywords = ["cryptography", "encryption", "zero-knowledge", "dictionary", "signatures"]
categories = ["cryptography", "algorithms"]
readme = "README.md"

[dependencies]
rand = "0.8"
sha2 = "0.10"
