[package]
name = "xcqa"
version = "0.1.0"
edition = "2024"
authors = ["rand0mdevel0per"]
description = "Dictionary-based cryptosystem with zero-knowledge proof signatures"
license = "MIT"
repository = "https://github.com/rand0mdevel0per/xcqa"
keywords = ["cryptography", "encryption", "zero-knowledge", "dictionary", "signatures"]
categories = ["cryptography", "algorithms"]
readme = "README.md"

[dependencies]
rand = "0.8"
sha2 = "0.10"
zstd = "0.13"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "xcqa_bench"
harness = false
